--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
     "jest": "^26.6.3",
+    "nuxt-vite": "0.0.36",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
     "vue-jest": "^3.0.7"
