--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nuxt-windicss": "^1.2.3",
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.4",
-    "vue-jest": "^3.0.7"
+    "vue-jest": "^3.0.7",
+    "vue-notion": "^1.1.3"
   }
 }
