Remove @nuxt/content

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,13 +15,7 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": [
-      "@nuxt/content",
-      "@nuxt/types",
-      "@types/node",
-      "@nuxtjs/dayjs",
-      "@types/prismjs"
-    ]
+    "types": ["@nuxt/types", "@types/node", "@nuxtjs/dayjs", "@types/prismjs"]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
